<resources>
    <string name="app_name">Student Euro Tracker</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed -- Incorrect username and password combination.</string>
    <string name="new_registration">New user registration</string>
    <string name="text_loginDirection">Log into Account</string>
    <string name="text_registrationDirection">New User Registration</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="finish_registration">Complete Registration</string>
    <string name="cancel_registration">Cancel</string>
    <string name="register_success">Registration successful</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="passwords_notEqual">Passwords do not match</string>
    <string name="invalid_password">Passwords must have at least six (6) characters</string>
    <string name="register_failed">Oops, please double-check information before registration</string>
    <string name="ask_toCloseMessage">Close Student Euro Tracker?</string>
    <string name="ask_toCancelRegMessage">Cancel registration?</string>
    <string name="ask_toLeaveDashboard">Log out of dashboard?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="understand">Okay, I understand</string>
    <string name="test_dashboard">Now in the main dashboard</string>
    <string name="header_income">Income</string>
    <string name="header_expenses">Expenses</string>
    <string name="header_weekly">Weekly</string>
    <string name="header_monthly">Monthly</string>
    <string name="hint_default">0.00</string>
    <string name="hint_studentAid">Student Aid</string>
    <string name="hint_employment">Employment</string>
    <string name="hint_savings">Savings</string>
    <string name="hint_other">Other</string>
    <string name="hint_rent">Rent</string>
    <string name="hint_food">Food</string>
    <string name="hint_transport">Transport</string>
    <string name="hint_personal">Personal</string>
    <string name="calculate_total">Update Total Income</string>
    <string name="calculate_totalExp">Update Expenses</string>
    <string name="total_weekly">Weekly Total</string>
    <string name="total_monthly">Monthly Total</string>
    <string name="showMonthlyIncome">Total Income\n€</string>
    <string name="stub_ShowMonthlyIncome">Total Income\n€0.00</string>
    <string name="showMonthlyExpenses">Total Expenses\n€</string>
    <string name="stub_ShowMonthlyExpenses">Total Expenses\n€0.00</string>
    <string name="show_summary">Account Summary</string>
    <string name="summary_good">Good standing! (GREEN)</string>
    <string name="summary_okay">Decent standing! (YELLOW)</string>
    <string name="summary_caution">Cautious standing! (ORANGE)</string>
    <string name="summary_bad">Bad standing! (RED)</string>
    <string name="summary_unknown">Oops, please double-check numbers</string>
    <string-array name="frequency">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
