<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jmpreyes.mu.cs.cs385proj.Register"
    android:background="@drawable/login_img">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_registrationDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_registrationDirection"
            android:textStyle="bold"
            android:textSize="10pt"/>

        <EditText
            android:id="@+id/text_regFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_firstName"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/text_regLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_lastName"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/text_regUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/text_regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/text_regConfirmPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_confirmPassword"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_regFinishReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_registration"/>

        <Button
            android:id="@+id/btn_regCancelReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_registration"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
